--- a/public/style.scss
+++ b/public/style.scss
@@ -14,6 +14,13 @@ body {
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+h1 {
+  font-size: 42px;
+  margin-bottom: 0;
+}
+.main-title {
+  font-weight: normal;
+}
 h2 {
   font-size: 28px;
   margin: 0;
@@ -41,6 +48,14 @@ ul {
   max-width: 800px;
   background: $primary-color;
   padding: 30px;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-image {
+  margin-top: 16px;
 }
 
 .header {
