--- a/public/style.css
+++ b/public/style.css
@@ -341,6 +341,20 @@ template {
   display: none;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
 body {
   background: #fafbfc;
   margin: 0;
@@ -395,6 +409,9 @@ ul li {
   color: #ffffff;
   text-decoration: none;
   padding: 10px 30px;
+}
+.header .header-shell a.btn {
+  background-color: #444;
 }
 .header .header-shell a svg {
   position: relative;
