--- a/public/style.scss
+++ b/public/style.scss
@@ -409,7 +409,7 @@ ul {
 
 .shell {
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 75vw;
   background: $primary-color;
   padding: 30px;
 }
@@ -420,7 +420,7 @@ ul {
 
   .header-shell {
     margin: 0 auto;
-    max-width: 880px;
+    max-width: 75vw;
     display: flex;
     justify-content: space-between;
 
