add Enej styles

--- a/public/style.scss
+++ b/public/style.scss
@@ -385,6 +385,15 @@ body {
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+h1 {
+  font-size: 42px;
+  margin-bottom: 0;
+}
+
+.main-title {
+  font-weight: normal;
+}
+
 h2 {
   font-size: 28px;
   margin: 0;
@@ -412,6 +421,18 @@ ul {
   max-width: 75vw;
   background: $primary-color;
   padding: 30px;
+}
+
+.flex {
+  display: flex;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.flex-image {
+  margin-top: 16px;
 }
 
 .header {
