--- a/public/style.css
+++ b/public/style.css
@@ -363,6 +363,15 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+h1 {
+  font-size: 42px;
+  margin-bottom: 0;
+}
+
+.main-title {
+  font-weight: normal;
+}
+
 h2 {
   font-size: 28px;
   margin: 0;
@@ -389,6 +398,22 @@ ul li {
   max-width: 75vw;
   background: #ffffff;
   padding: 30px;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.space-between {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.flex-image {
+  margin-top: 16px;
 }
 
 .header {
