--- a/public/style.css
+++ b/public/style.css
@@ -45,7 +45,7 @@ ul li {
   list-style: none;
   padding: 10px;
 }
-ul li:nth-child(odd) {
+ul li:nth-child(2n+1) {
   background-color: #fafbfc;
 }
 ul li:hover {
