--- a/public/style.scss
+++ b/public/style.scss
@@ -69,7 +69,7 @@ ul {
     list-style: none;
     padding: 10px;
 
-    &:nth-child(odd) {
+    &:nth-child(2n + 1) {
       background-color: $background-color;
     }
 
