--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,11 @@
+/* Variables */
+/* Normalize rules */
 *:hover {
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
 
+/*  General Styles */
 body {
   background: #fafbfc;
   margin: 0;
@@ -44,12 +47,6 @@ ul {
 ul li {
   list-style: none;
   padding: 10px;
-}
-#ferry ul li:nth-child(2n+1) {
-  background-color: #fafbfc;
-}
-#ferry ul li:hover {
-  background-color: #e6e6e6;
 }
 
 .shell {
@@ -103,41 +100,6 @@ ul li {
   fill: #ffffff;
 }
 
-.next-ferry {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 60px;
-}
-
-.route {
-  width: 50%;
-}
-
-.time {
-  width: 50%;
-  text-align: right;
-}
-
-.to {
-  padding-bottom: 40px;
-}
-
-.map {
-  height: 200px;
-  overflow: hidden;
-  margin: -30px -30px 20px;
-  position: relative;
-}
-.map img {
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  position: absolute;
-}
-
 .link-button {
   display: block;
   padding: 0.75em 1.5em;
@@ -158,12 +120,47 @@ ul li {
   top: 6px;
 }
 
+/*  Ferry page */
+#ferry .next-ferry {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 60px;
+}
+#ferry .route {
+  width: 50%;
+}
+#ferry .time {
+  width: 50%;
+  text-align: right;
+}
+#ferry .to {
+  padding-bottom: 40px;
+}
+#ferry .map {
+  height: 200px;
+  overflow: hidden;
+  margin: -30px -30px 20px;
+  position: relative;
+}
+#ferry .map img {
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  position: absolute;
+}
+#ferry ul li:nth-child(2n+1) {
+  background-color: #fafbfc;
+}
+#ferry ul li:hover {
+  background-color: #e6e6e6;
+}
+
+/*  Tide page */
 /* Mobile */
 @media only screen and (max-width: 600px) {
-  .shell {
-    padding: 20px;
-  }
-
   .map {
     margin: -20px -20px 20px;
   }
