--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,8 @@
 /* Variables */
 /* Normalize rules */
 *:hover {
-  -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
 }
 
 /*  General Styles */
@@ -64,8 +64,16 @@ ul li {
 
 .space-between {
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.padding-bottom {
+  padding-bottom: 40px;
+}
+
+.align-right {
+  text-align: right;
 }
 
 .flex-image {
@@ -79,12 +87,8 @@ ul li {
 .header .header-shell {
   margin: 0 auto;
   max-width: 860px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 .header .header-shell a {
   color: #ffffff;
@@ -121,22 +125,6 @@ ul li {
 }
 
 /*  Ferry page */
-#ferry .next-ferry {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 60px;
-}
-#ferry .route {
-  width: 50%;
-}
-#ferry .time {
-  width: 50%;
-  text-align: right;
-}
-#ferry .to {
-  padding-bottom: 40px;
-}
 #ferry .map {
   height: 200px;
   overflow: hidden;
@@ -147,8 +135,7 @@ ul li {
   width: 100%;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   position: absolute;
 }
 #ferry ul li:nth-child(2n+1) {
@@ -178,4 +165,5 @@ ul li {
     width: 24px;
   }
 }
+
 /*# sourceMappingURL=style.css.map */
